--- a/index.html
+++ b/index.html
@@ -3,41 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شركة فطين للذكاء الاصطناعي</title>
+    <title>FATEEN POS System</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Tajawal', sans-serif; background-color: #0f172a; color: white; scroll-behavior: smooth; }
-        .glass { background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); border: 1px rgba(255,255,255,0.1) solid; }
-        .hero-gradient { background: radial-gradient(circle at center, #1e40af 0%, #0f172a 70%); }
-        
-        /* حركة نبض لزرار الواتساب */
-        @keyframes pulse-green {
-            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.7); }
-            70% { transform: scale(1.1); box-shadow: 0 0 0 10px rgba(34, 197, 94, 0); }
-            100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(34, 197, 94, 0); }
-        }
-        .whatsapp-btn { animation: pulse-green 2s infinite; }
+        body { font-family: 'Tajawal', sans-serif; background-color: #000000; color: #ffffff; scroll-behavior: smooth; }
+        .border-white-custom { border: 1px solid rgba(255, 255, 255, 0.2); }
+        .hover-white:hover { background-color: #ffffff; color: #000000; transition: 0.3s; }
+        .card-black { background-color: #0a0a0a; border: 1px solid #222; }
     </style>
 </head>
 <body>
 
-    <nav class="p-6 flex justify-between items-center glass sticky top-0 z-50">
-        <div class="text-2xl font-bold text-blue-400">فطين <span class="text-white">للذكاء الاصطناعي</span></div>
+    <nav class="p-6 flex justify-between items-center border-b border-gray-800 bg-black sticky top-0 z-50">
+        <div class="flex items-center gap-4">
+            <img src="https://via.placeholder.com/50/ffffff/000000?text=F" alt="Logo" class="w-10 h-10 border border-white">
+            <div class="text-xl font-bold tracking-widest uppercase">FATEEN <span class="font-light text-gray-400">POS System</span></div>
+        </div>
         <div class="space-x-reverse space-x-6 hidden md:flex">
-            <a href="#" class="hover:text-blue-400 transition">الرئيسية</a>
-            <a href="#about" class="hover:text-blue-400 transition">ما هو الذكاء الاصطناعي؟</a>
-            <a href="#services" class="hover:text-blue-400 transition">خدماتنا</a>
+            <a href="#services" class="hover:text-gray-400 transition">خدماتنا</a>
+            <a href="#contact" class="hover:text-gray-400 transition">تواصل معنا</a>
         </div>
     </nav>
 
-    <section class="h-screen flex flex-col justify-center items-center text-center p-4 hero-gradient">
-        <h1 class="text-5xl md:text-7xl font-bold mb-6">نصنع <span class="text-blue-500">مستقبل</span> أعمالك اليوم</h1>
-        <p class="text-gray-400 text-xl max-w-2xl">نحن نحول البيانات إلى قرارات ذكية، ونبني أنظمة برمجية تفكر وتتعلم لتخدم نمو تجارتك.</p>
-        <div class="mt-10">
-            <a href="#services" class="bg-blue-600 text-white px-8 py-4 rounded-full text-lg font-bold hover:scale-105 transition-transform inline-block">استكشف خدماتنا</a>
+    <section class="h-[80vh] flex flex-col justify-center items-center text-center p-4">
+        <h1 class="text-6xl md:text-8xl font-bold mb-6 tracking-tighter">FATEEN</h1>
+        <p class="text-gray-400 text-xl max-w-2xl font-light">الجيل القادم من أنظمة إدارة المبيعات والذكاء الاصطناعي. بساطة التصميم، قوة الأداء.</p>
+        <div class="mt-10 flex gap-4">
+            <a href="#services" class="border border-white text-white px-8 py-3 hover-white transition-all">اكتشف حلولنا</a>
+            <a href="#contact" class="bg-white text-black px-8 py-3 font-bold hover:bg-gray-200 transition-all">اطلب الآن</a>
         </div>
     </section>
 
-    <a href="https://wa
-    
+    <section id="services" class="py-20 px-6 max-w-6xl mx-auto">
+        <h2 class="text-3xl font-bold text-center mb-16 border-b border-white w-fit mx-auto pb-2">خدماتنا الاحترافية</h2>
+        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="card-black p-8 rounded-none hover:border-white transition-all">
+                <h3 class="text-xl font-bold mb-4 uppercase">نظم الكاشير (POS)</h3>
+                <p class="text-gray-500 text-sm">أنظمة متكاملة للمطاعم والمحلات تعمل أوفلاين مع دعم كامل لضريبة القيمة المضافة.</p>
+            </div>
+            <div class="card-black p-8 rounded-none hover:border-white transition-all">
+                <h3 class="text-xl font-bold mb-4 uppercase">ذكاء الأعمال (BI)</h3>
+                <p class="text-gray-500 text-sm">تحويل بيانات مبيعاتك إلى تقارير ورسوم بيانية ذكية تساعدك في اتخاذ القرار.</p>
+            </div>
+            <div class="card-black p-8 rounded-none hover:border-white transition-all">
+                <h3 class="text-xl font-bold mb-4 uppercase">أتمتة العمليات</h3>
+                <p class="text-gray-500 text-sm">تقليل الاعتماد على العنصر البشري في المهام المتكررة لزيادة الدقة والسرعة.</p>
+            </div>
+            <div class="card-black p-8 rounded-none hover:border-white transition-all">
+                <h3 class="text-xl font-bold mb-4 uppercase">الدعم الفني</h3>
+                <p class="text-gray-500 text-sm">دعم فني متواصل وتحديثات دورية لضمان استقرار عمل نظامك في كافة الظروف.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="py-20 bg-[#050505] text-center">
+        <h2 class="text-2xl font-light mb-10 text-gray-400">قنوات التواصل المباشرة</h2>
+        <div class="flex flex-wrap justify-center gap-6 px-4">
+            <a href="https://wa.me/201000000000" class="flex items-center gap-2 border border-white px-6 py-3 hover-white min-w-[200px] justify-center">
+                <span>WATTSAPP</span>
+            </a>
+            <a href="https://facebook.com/yourpage" class="flex items-center gap-2 border border-white px-6 py-3 hover-white min-w-[200px] justify-center">
+                <span>FACEBOOK</span>
+            </a>
+            <a href="mailto:info@fateen.com" class="flex items-center gap-2 border border-white px-6 py-3 hover-white min-w-[200px] justify-center">
+                <span>GMAIL</span>
+            </a>
+            <a href="tel:+201000000000" class="flex items-center gap-2 border border-white px-6 py-3 hover-white min-w-[200px] justify-center">
+                <span>CALL US</span>
+            </a>
+        </div>
+    </section>
+
+    <footer class="py-10 border-t border-gray-900 text-center text-gray-600 text-xs tracking-widest uppercase">
+        <p>© 2026 FATEEN POS SYSTEM - ASWAN, EGYPT</p>
+    </footer>
+
+</body>
+</html>
