--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <div id="contactModal" class="contact-modal hidden">
         <div class="modal-card fade-in">
             <button onclick="toggleContactModal()" class="absolute top-6 right-6 text-gray-400 hover:text-black transition text-xl">✕</button>
-            <h2 id="modalTitle" class="text-black text-2xl font-bold mb-8 uppercase">تواصل معنا عبر</h2>
+            <h2 id="modalTitle" class="text-black text-xl md:text-2xl font-bold mb-4 uppercase leading-tight">طلب ديمو وعرض سعر</h2>
+            <p id="modalSub" class="text-gray-500 text-xs mb-8 uppercase tracking-widest font-semibold">تواصل معنا الآن لتجربة النظام</p>
             <div class="grid grid-cols-1 gap-5">
                 <a href="https://wa.me/201273929303" target="_blank" class="bg-[#25D366] pulse-green text-white p-5 rounded-2xl hover:opacity-90 transition font-bold uppercase text-xs tracking-widest shadow-lg">1. WhatsApp</a>
                 <a href="mailto:info@fateen.com" class="border-2 border-gray-100 p-5 rounded-2xl text-black hover:bg-gray-50 transition font-bold uppercase text-xs tracking-widest">2. Gmail</a>
@@ -73,14 +74,14 @@
     <div id="mainContent" class="hidden">
         <nav class="py-3 px-6 md:px-12 flex justify-between items-center header-white sticky top-0 z-50">
             <img src="لوجو فطين اسود.png" alt="Logo" class="h-10 md:h-12 w-auto">
-            <a href="https://wa.me/201273929303" target="_blank" id="headerContact" class="bg-black text-white px-6 py-2.5 text-[10px] md:text-[11px] font-bold uppercase tracking-widest rounded-full hover:bg-gray-800 transition">تواصل عبر الواتساب</a>
+            <button onclick="toggleContactModal()" id="headerContact" class="bg-black text-white px-6 py-2.5 text-[10px] md:text-[11px] font-bold uppercase tracking-widest rounded-full hover:bg-gray-800 transition shadow-md">اطلب ديمو مجاني</button>
         </nav>
 
         <section class="min-h-[85vh] tech-bg-dark flex flex-col justify-center items-center text-center p-8">
             <img src="لوجو فطين ابيض.png" alt="Hero Logo" class="w-72 md:w-[480px] mb-12">
             <h2 id="heroSub" class="text-white text-base md:text-xl font-medium mb-12 px-4 leading-relaxed uppercase tracking-[0.2em]">INTELLIGENT POINT OF SALE SOLUTIONS</h2>
             <div class="flex flex-wrap justify-center gap-6">
-                <button onclick="toggleContactModal()" id="btnChat" class="bg-white text-black px-12 py-4 text-xs font-bold uppercase hover:bg-gray-200 transition-all shadow-xl rounded-full">Start Chat</button>
+                <button onclick="toggleContactModal()" id="btnChat" class="bg-white text-black px-12 py-4 text-xs font-bold uppercase hover:bg-gray-200 transition-all shadow-xl rounded-full">اطلب ديمو مجاني</button>
                 <a href="#services" id="btnSer" class="border-2 border-white text-white px-12 py-4 text-xs font-bold uppercase hover:bg-white hover:text-black transition-all rounded-full">Services</a>
             </div>
         </section>
@@ -104,11 +105,12 @@
         const content = {
             en: {
                 heroSub: "INTELLIGENT POINT OF SALE SOLUTIONS",
-                btnChat: "Start Chat",
+                btnChat: "Request Free Demo",
                 btnSer: "View Expertise",
                 serTitle: "Our Expertise",
-                modalTitle: "Connect With Us",
-                headerContact: "WhatsApp Contact",
+                modalTitle: "Request Demo & Pricing",
+                modalSub: "Contact us now to try the system",
+                headerContact: "Request Free Demo",
                 fbMsg: "Our Facebook page is under construction and will be available soon!",
                 services: [
                     { t: "POS Systems", d: "High-performance systems for retail and hospitality, engineered for speed." },
@@ -119,11 +121,12 @@
             },
             ar: {
                 heroSub: "حلول نقاط البيع الذكية المتكاملة للمؤسسات",
-                btnChat: "تحدث معنا",
+                btnChat: "اطلب ديمو مجاني",
                 btnSer: "مجالات الخبرة",
                 serTitle: "خبراتنا المتميزة",
-                modalTitle: "تواصل معنا عبر",
-                headerContact: "تواصل عبر الواتساب",
+                modalTitle: "طلب ديمو وعرض سعر",
+                modalSub: "تواصل معنا الآن لتجربة النظام",
+                headerContact: "اطلب ديمو مجاني",
                 fbMsg: "صفحة الفيسبوك قيد التجهيز حالياً وستعمل قريباً جداً!",
                 services: [
                     { t: "نظم الكاشير", d: "أنظمة برمجية فائقة الأداء مصممة خصيصاً للمحلات والمطاعم الكبرى." },
@@ -145,6 +148,7 @@
             document.getElementById('btnSer').innerText = content[lang].btnSer;
             document.getElementById('serTitle').innerText = content[lang].serTitle;
             document.getElementById('modalTitle').innerText = content[lang].modalTitle;
+            document.getElementById('modalSub').innerText = content[lang].modalSub;
             document.getElementById('headerContact').innerText = content[lang].headerContact;
 
             const grid = document.getElementById('servicesGrid');
