--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <div id="contactModal" class="contact-modal hidden">
         <div class="modal-card fade-in">
             <button onclick="toggleContactModal()" class="absolute top-6 right-6 text-gray-400 hover:text-black transition text-xl">✕</button>
-            <h2 id="modalTitle" class="text-black text-xl md:text-2xl font-bold mb-4 uppercase leading-tight">طلب ديمو وعرض سعر</h2>
-            <p id="modalSub" class="text-gray-500 text-xs mb-8 uppercase tracking-widest font-semibold">تواصل معنا الآن لتجربة النظام</p>
+            <h2 id="modalTitle" class="text-black text-2xl md:text-3xl font-bold mb-4 uppercase leading-tight">تواصل معنا</h2>
+            <p id="modalSub" class="text-gray-500 text-xs mb-8 uppercase tracking-widest font-semibold">نحن هنا لخدمتك دائماً</p>
             <div class="grid grid-cols-1 gap-5">
                 <a href="https://wa.me/201273929303" target="_blank" class="bg-[#25D366] pulse-green text-white p-5 rounded-2xl hover:opacity-90 transition font-bold uppercase text-xs tracking-widest shadow-lg">1. WhatsApp</a>
                 <a href="mailto:info@fateen.com" class="border-2 border-gray-100 p-5 rounded-2xl text-black hover:bg-gray-50 transition font-bold uppercase text-xs tracking-widest">2. Gmail</a>
@@ -108,8 +108,8 @@
                 btnChat: "Request Free Demo",
                 btnSer: "View Expertise",
                 serTitle: "Our Expertise",
-                modalTitle: "Request Demo & Pricing",
-                modalSub: "Contact us now to try the system",
+                modalTitle: "Contact Us",
+                modalSub: "We are always here to help",
                 headerContact: "Request Free Demo",
                 fbMsg: "Our Facebook page is under construction and will be available soon!",
                 services: [
@@ -124,8 +124,8 @@
                 btnChat: "اطلب ديمو مجاني",
                 btnSer: "مجالات الخبرة",
                 serTitle: "خبراتنا المتميزة",
-                modalTitle: "طلب ديمو وعرض سعر",
-                modalSub: "تواصل معنا الآن لتجربة النظام",
+                modalTitle: "تواصل معنا",
+                modalSub: "نحن هنا لخدمتك دائماً",
                 headerContact: "اطلب ديمو مجاني",
                 fbMsg: "صفحة الفيسبوك قيد التجهيز حالياً وستعمل قريباً جداً!",
                 services: [
