--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 serTitle: "خبراتنا المتميزة",
                 modalTitle: "طلب ديمو وعرض سعر",
                 modalSub: "تواصل معنا الآن لتجربة النظام",
-                headerContact: "اطلب ديمو مجاني",
+                headerContact: "تواصل معانا",
                 fbMsg: "صفحة الفيسبوك قيد التجهيز حالياً وستعمل قريباً جداً!",
                 services: [
                     { t: "نظم الكاشير", d: "أنظمة برمجية فائقة الأداء مصممة خصيصاً للمحلات والمطاعم الكبرى." },
@@ -174,3 +174,4 @@
     </script>
 </body>
 </html>
+
